--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-apexcharts": "^1.6.1",
     "vue-chartjs": "^3.5.1",
     "vue-excel-xlsx": "^1.0.11",
+    "vue-json-csv": "^1.2.12",
     "vue-json-excel": "^0.3.0",
     "vue-papa-parse": "^2.0.0",
     "vue-router": "^3.5.1",
